fixed leaderboard layout bug

--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ body {
 }
 
 table {
-    width: 75%;
+    width: 80%;
     border-collapse: collapse;
     margin: 0 auto; /* Center the table */
     background-color: black;
+    table-layout: fixed;
 }
 
 table, th, td {
